# ordera

./: .gitignore  README.md  docker-compose.yml  test_menu.txt
.claude/: settings.local.json
.github/workflows/: cicd-be.yaml  cicd-fe.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_plan_enum_to_string_add_usage_alert.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: session_auth.py
backend/app/models/: __init__.py  inventory_item.py  inventory_log.py  menu_ingredient.py  otp.py  owner.py  session.py
backend/app/routers/: auth.py  dashboard.py  gmail_oauth.py  grocery.py  inventory.py  knowledge.py  menu.py  orders.py  subscription.py  voice.py
backend/app/schemas/: auth.py  inventory_schemas.py  knowledge.py  order.py
backend/app/services/: ai_engine.py  document_service.py  email_service.py  gmail_oauth_service.py  inventory_service.py  otp_service.py  session_service.py  sms_service.py  stripe_service.py  subscription_service.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Icons.jsx  Layout.jsx  OrderCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Analytics.jsx  DocumentUpload.jsx  Inventory.jsx  KitchenDashboard.jsx  Login.jsx  MenuManager.jsx  OrderHistory.jsx  Settings.jsx  (+2 more)
k8s/: ingress.yaml  namespace.yaml  secret.yaml
k8s/be/: deployment.yaml  service.yaml
k8s/fe/: deployment.yaml  service.yaml
(+12 files in other folders)
