[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "anthropic>=0.40.0",
    "bcrypt>=4.2.0",
    "cryptography>=42.0.0",
    "deepgram-sdk>=3.7.7",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.9.0",
    "pyjwt>=2.9.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "stripe>=10.0.0",
    "telnyx>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
